# RetailCheck

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  udo journalctl -u retailcheck.service -f  udo journalctl -u retailcheck.service -n 50 --no-pager
.github/workflows/: ci.yml
data/sheets/: Attachments.csv  Audit.csv  Export.csv  RunSteps.csv  Runs.csv  Shops.csv  TemplateSteps.csv  Templates.csv  Users.csv
docs/: Architecture.md  BotFlows.md  DataModel.md  DeliveryPlan.md  EmployeeGuide.md  OnePage.md  PRD.md  PilotBrief.md  PilotReport.md  QAPlan.md  QR.md  README.md  Tasks.md  TrainingPlan.md  UX.md
locale/ru/: messages.json
ops/systemd/: retailcheck.service
src/retailcheck/: __init__.py  __main__.py  config.py
templates/: closing_v1.json  closing_v2.json  closing_v3.json  continue_v1.json  continue_v2.json  opening_v1.json  opening_v2.json  opening_v3.json
tests/: conftest.py  test_placeholder.py  test_template_loader.py
tests/bot/: test_status_helpers.py  test_steps_helpers.py  test_steps_terminal.py
tests/export/: test_repository.py  test_utils.py
tests/localization/: test_gettext.py
tests/reminders/: test_service.py
tests/runs/: test_run_record.py  test_run_service.py
tests/runsteps/: test_runsteps_repository.py
tests/sheets/: test_client.py
tests/shops/: test_slots_utils.py
tools/: delta_alerts.py  generate_qr.py  import_templates.py  lock_monitor.py  metrics_report.py  reminder_scheduler.py  seed_sheets.py  send_reminders.py
(+38 files in other folders)
